Cambios de estructuración y openapi
